--- a/cmpt373/cmakeExercise/CMakeLists.txt
+++ b/cmpt373/cmakeExercise/CMakeLists.txt
@@ -1,3 +1,6 @@
+#clang setting for the complier
+set(CMAKE_C_COMPILER clang)
+set(CMAKE_CXX_COMPILER clang++)
 #Cmake version requirements
 cmake_minimum_required(VERSION 3.28.3)
 #project name
@@ -5,15 +8,11 @@ project(sorting)
 #setting c++23 as requirements
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-#executable 
-add_executable(sorting)
 
-#target sources
-target_sources(sorting PRIVATE main.cpp SortIntegers.cpp)
+#setting output dir
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib") 
 
-#include for headers
-target_include_directories(sorting PRIVATE ${CMAKE_SOURCE_DIR})
-
-#clang setting for the complier
-set(CMAKE_C_COMPILER clang)
-set(CMAKE_CXX_COMPILER clang++)
+#adding sub dir for lib and exc
+add_subdirectory(lib/sortIntegers)
+add_subdirectory(tools/fibSorter)
