--- a/cmpt373/cmakeExercise/lib/sortIntegers/CMakeLists.txt
+++ b/cmpt373/cmakeExercise/lib/sortIntegers/CMakeLists.txt
@@ -6,3 +6,12 @@ target_include_directories(sortIntegers PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
 )
+
+install(TARGETS sortIntegers
+    EXPORT sortIntegersTargets
+    DESTINATION lib
+)
+
+install(FILES include/SortIntegers.h
+    DESTINATION include
+)
