--- a/cmpt373/cmakeExercise/tools/sosier/CMakeLists.txt
+++ b/cmpt373/cmakeExercise/tools/sosier/CMakeLists.txt
@@ -10,3 +10,7 @@ CPMAddPackage(
 add_executable(sosier main.cpp)
 
 target_link_libraries(sosier PRIVATE sekrit-sos)
+
+install(TARGETS sosier
+    DESTINATION bin
+)
